<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="@dimen/common_padding"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_50px"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/img_tag"
            android:layout_width="@dimen/dimen_50px"
            android:layout_height="@dimen/dimen_50px"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:src="@drawable/icon_msg_system_update" />

        <TextView
            android:id="@+id/txt_tag_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dimen_10px"
            android:layout_toRightOf="@id/img_tag"
            android:text="系统"
            android:textColor="@color/c_yellow_cdac8d"
            android:textSize="@dimen/commmon_font_size_small" />


        <ImageView
            android:id="@+id/img_tag_new"
            android:layout_width="32dp"
            android:layout_height="15dp"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/txt_tag_name"
            android:adjustViewBounds="true"
            android:src="@drawable/icon_tag_new"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/ll_more"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignParentRight="true"
            android:gravity="right">

            <ImageView
                android:layout_width="@dimen/dimen_50px"
                android:layout_height="@dimen/dimen_50px"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/icon_msg_more" />
        </LinearLayout>
    </RelativeLayout>



    <TextView
        android:id="@+id/txt_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_60px"
        android:layout_marginRight="@dimen/dimen_70px"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dimen_20px"
        android:maxLines="1"
        android:lineSpacingMultiplier="1.2"
        android:text="@string/msg_system_task_title"
        android:textColor="@color/c_black_3c4350"
        android:textSize="@dimen/common_font_size_x" />


    <TextView
        android:id="@+id/txt_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_title"
        android:layout_marginTop="@dimen/dimen_15px"
        android:lineSpacingMultiplier="1.2"
        android:ellipsize="end"
        android:text="@string/msg_system_task_content"
        android:textSize="13sp" />


    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/c_gray_e5"
        android:layout_marginTop="@dimen/dimen_20px"
        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_title"
        android:layout_marginTop="@dimen/dimen_15px"
        android:lineSpacingMultiplier="1.2"
        android:ellipsize="end"
        android:text="@string/msg_system_task_mark"
        android:textColor="@color/c_yellow_cdac8d"
        android:textSize="12sp" />

</LinearLayout>
