<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/dimen_56px"
        android:layout_marginLeft="@dimen/dimen_56px"
        android:layout_marginBottom="@dimen/dimen_188px"
        android:layout_marginTop="@dimen/dimen_148px" >

        <ImageView
            android:id="@+id/img_calendar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/dimen_28px"
            android:scaleType="fitXY" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignTop="@+id/img_calendar"
            android:layout_alignBottom="@+id/img_calendar"
            android:orientation="vertical">
            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="349"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="151"
                android:background="@drawable/shape_rec_radius_20px"
                >

                <TextView
                    android:id="@+id/tv_share_title"
                    style="@style/text_f_30_c_999"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:padding="@dimen/dimen_28px"
                    android:text="@string/share_msg_now" />

                <LinearLayout
                    android:id="@+id/ll_share_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal"
                    android:layout_alignParentBottom="true">
                    <!-- 好友-->
                    <RelativeLayout
                        android:id="@+id/ll_share_friend"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/tv_test"
                            android:layout_width="@dimen/dimen_164px"
                            android:layout_height="@dimen/dimen_180px"
                            android:layout_centerHorizontal="true"
                            android:background="@drawable/selector_wechat_friend" />

                        <TextView
                            style="@style/text_f_24_c_3c4350"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_below="@+id/tv_test"
                            android:visibility="gone"
                            android:text="@string/share_friend" />

                    </RelativeLayout>
                    <!--朋友圈-->
                    <RelativeLayout
                        android:id="@+id/ll_share_circle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginLeft="@dimen/dimen_100px">

                        <ImageView
                            android:id="@+id/tv_test_right"
                            android:layout_width="@dimen/dimen_164px"
                            android:layout_height="@dimen/dimen_180px"
                            android:layout_centerHorizontal="true"
                            android:background="@drawable/selector_wechat_circle" />

                        <TextView
                            style="@style/text_f_24_c_3c4350"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_below="@+id/tv_test_right"
                            android:visibility="gone"
                            android:text="@string/share_circle" />

                    </RelativeLayout>
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>

    </RelativeLayout>

    <ImageView
        android:id="@+id/img_circle_calendar"
        android:layout_width="@dimen/dimen_52px"
        android:layout_height="@dimen/dimen_52px"
        android:layout_alignParentRight="true"
        android:layout_marginTop="@dimen/dimen_148px"
        android:layout_marginRight="@dimen/dimen_120px"
        android:background="@drawable/icon_circle_calendar"/>

</RelativeLayout>


